--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@ like( $indi->Atom( 7 ), qr/^\d$/, 'Bits set'); # ...
           <aside class='notes'>Estos "build servers" se fueron
           extendiendo de forma natural en sistemas de integración
           continua, con Hudson, y luego Jenkins, y finalmente sistemas
-          comerciales como Travis.
+          comerciales como Travis. Jenkins inauguró
+          "configuración-como-código" y el uso de YAML para este tipo
+            de sistemas.</aside>
         </section>
 
         <section data-background='https://live.staticflickr.com/1887/44356723052_1515fcdc97_k_d.jpg'><h1>Un desvío por <strong>DevOps</strong></h1>
@@ -141,20 +143,53 @@ like( $indi->Atom( 7 ), qr/^\d$/, 'Bits set'); # ...
           <h2 class='fragment'>Infraestructura como código</h2>
           <aside class='notes'>Primer DevOps Days en <a
           href='https://devops.com/the-origins-of-devops-whats-in-a-name/'>
-            Bélgica, año 2008</a></aside>
+            Bélgica, año 2008</a>. Primeras herramientas: Puppet,
+          CFEngine, y otras. Puppet es tan complicada que ni siquiera
+          he conseguido ver una manera fácil de mostrar un ejemplo.</aside>
         </section>
 
-        <section><h1>Finalmente, integración continua</h1>
-          <h2 class='fragment'><a
-            href='https://blog.travis-ci.com/2012-12-30-2012-at-travis-ci-what-a-blast/'>Travis
-            CI</a> creado en 2012, inicialmente para Ruby</h2>
-          <img src='https://www.jessesquires.com/img/tests_pass.jpg'
-          alt='tests are passing'>
-          <aside class='notes'>Sacado de <a
-          href='https://www.jessesquires.com/blog/2016/05/22/open-source-everything/'>aquí</a>. Travis,
-            en 2021, ya no es lo que era</aside>
+        <section>
+          <section><h1>Finalmente, integración continua</h1>
+            <h2 class='fragment'><a
+              href='https://blog.travis-ci.com/2012-12-30-2012-at-travis-ci-what-a-blast/'>Travis
+              CI</a> creado en 2012, inicialmente para Ruby</h2>
+            <img src='https://www.jessesquires.com/img/tests_pass.jpg'
+                 alt='tests are passing'>
+            <aside class='notes'>Sacado de <a
+              href='https://www.jessesquires.com/blog/2016/05/22/open-source-everything/'>aquí</a>. Travis,
+              en 2021, ya no es lo que era</aside>
+          </section>
+
+          <section><h1>Escribir un libro, usar CI...</h1>
+            <pre><code data-line-numbers='1-4|5-6|7'>language: perl
+perl:
+  - "5.14"
+  - "5.16"
+before_install:
+  - sudo apt-get install libhunspell libhunspell-dev hunspell-en-us
+script: "cd Text-Hoborg; perl Makefile.PL && make test"</code></pre>
+
+          <aside class='notes'>En <a
+        href='https://github.com/JJ/hoborg/commit/f9c8a2e77ce5b17981e7dfc68c7575075d61eb0f#diff-6ac3f79fc25d95cd1e3d51da53a4b21b939437392578a35ae8cd6d5366ca5485'>Mayo
+        2013, este fue mi primer fichero de configuración de Travis,
+        elegido así porque usaba Parl, que era lo que iba a usar yo
+        para la comprobación ortográfica de un libro. Travis
+        simplifica mucho la configuración, dividiendo el proceso en
+        una serie de fases y con configuraciónes por omisión
+        específicas según el lenguaje de programación. Aquí también se
+        ve las posibilidades que ofrece CI y que son más complicadas
+        en local: testear con diferentes versiones de un lenguaje de
+        programación, por ejemplo. E infraestructura y configuración
+            como código.</a>
+          </aside>
+        </section>
         </section>
 
+
+        <section
+          data-background='https://live.staticflickr.com/3904/14740802688_3db2862d96_o_d.jpg'>
+          <h1>¡Software <strong>libre</strong>!</h1></section>
+        
         <section><!-- En la práctica -->
           <h1>Primero: los tests</h1>
         </section>
