--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
             mundo trabajando sobre la rama principal</aside>
         </section>
 
+        <section
+        data-background='https://live.staticflickr.com/7357/16351457469_cae598e833_c_d.jpg'><h1>¿De
+          dónde viene?</h1>
+        </section>
+
         <section>
           <section><h1>En la antigüedad se crearon las <em>build
             tools</em></h1>
@@ -192,11 +197,34 @@ script: "cd Text-Hoborg; perl Makefile.PL && make test"</code></pre>
           <h1>¡Software <strong>libre</strong>!</h1>
         </section>
 
-        <section>
+        <section data-background='https://live.staticflickr.com/65535/48433811362_c2b6c2a034_k_d.jpg'>
           <h1>CI en 2021: Una forma de vida</h1>
           <img src='https://i.imgflip.com/1mskui.jpg' alt='Does not  simply add CI to a project'>
         </section>
+
         <!-- En la práctica -->
+
+        <section
+          data-background='https://live.staticflickr.com/65535/50846244807_e6025eabd8_o_d.jpg'><h2
+          class='fragment'>Infraestructura...</h2>
+          <h2 class='fragment'>Configuración...</h2>
+          <h2 class='fragment'>Pruebas...</h2>
+          <h2 class='fragment'>Despliegue...</h2>
+          <h1>Como código</h1>
+          <aside class='notes'>Automatización de todo el camino que va
+            desde los fuentes a la aplicación funcionando</aside>
+        </section>
+
+        <section
+        data-background='https://live.staticflickr.com/7895/47348557852_18a51c506c_k_d.jpg'><h1>Muchos
+          pasos hasta el despliegue</h1>
+          <h2 class='fragment'>Generación, comprobaciones,
+            <em>olores</em>, transpilación, servicios,
+            instanciación... </h2>
+        </section>
+
+        <section>
+        </section>
 
 	<section><!-- Makefiles 2021 -->
 	  <section><h1><code>make</code> todavía está ahí</h1>
@@ -230,7 +258,7 @@ gulp.task('start', async () => {
 
 	<section><!-- tests modernos -->
 	  <section>
-          <h1>Primero: los tests</h1>
+          <h1>Tests en 2021: estructurados, asíncronos</h1>
           <pre><code data-line-numbers='1-4|5,8'>class StarletteTesting(TestCase):
     def __init__(self, *args, **kwargs):
         super(StarletteTesting, self).__init__(*args, **kwargs)
