--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@ $(HTML): %.html: %.md
           href='https://www.cloudbees.com/blog/source-code-management-more-just-git'>
             esta página</a></aside>
         </section>
-          
 
         <section data-background='https://live.staticflickr.com/58/193565159_35b223af23_o_d.jpg'>
           <h1>Luego llegó la programación extrema</h1>
@@ -191,7 +190,6 @@ script: "cd Text-Hoborg; perl Makefile.PL && make test"</code></pre>
           </section>
         </section>
 
-
         <section
           data-background='https://live.staticflickr.com/3904/14740802688_3db2862d96_o_d.jpg'>
           <h1>¡Software <strong>libre</strong>!</h1>
@@ -215,15 +213,44 @@ script: "cd Text-Hoborg; perl Makefile.PL && make test"</code></pre>
             desde los fuentes a la aplicación funcionando</aside>
         </section>
 
-        <section
-        data-background='https://live.staticflickr.com/7895/47348557852_18a51c506c_k_d.jpg'><h1>Muchos
-          pasos hasta el despliegue</h1>
-          <h2 class='fragment'>Generación, comprobaciones,
-            <em>olores</em>, transpilación, servicios,
-            instanciación... </h2>
-        </section>
-
         <section>
+          <section
+            data-background='https://live.staticflickr.com/7895/47348557852_18a51c506c_k_d.jpg'><h1>Muchos
+            pasos hasta el despliegue</h1>
+            <h2 class='fragment'>Generación, comprobaciones,
+              <em>olores</em>, transpilación, servicios,
+              instanciación... </h2>
+          </section>
+          
+          <section data-background='https://live.staticflickr.com/5141/5674661195_3382f22717_k_d.jpg'>
+          <h1><strong>Docker</strong> lo ha cambiado todo</h1>
+          <pre><code data-line-numbers='1|7|8'>FROM perl:5.32-slim-threaded
+LABEL version="1.5" maintainer="JJ Merelo &lt;jjmerelo@GMail.com>" perl5version="5.32"
+RUN chmod o+r /etc/resolv.conf \
+    && mkdir /test && apt-get update \
+    && apt-get install -y git curl gcc libssl-dev zlib1g-dev   \
+    && cpanm Net::SSLeay --verbose --notest \
+    && cpanm IO::Socket::SSL Test::More Test::Harness Git File::Slurper JSON TAP::Formatter::Color Term::ANSIColor Mojo::UserAgent Net::Ping YAML JSON::XS Scalar::Util
+ENTRYPOINT prove -I/usr/lib -c
+          </code></pre>
+          <aside class='notes'>Sacado <a
+          href='https://github.com/JJ/iv-test/blob/master/Dockerfile'>de
+            aquí, está hecho específicamente para ejecutar los tests
+            en Travis.</a>
+          </aside>
+          </section>
+
+          <section
+          data-background='https://live.staticflickr.com/65535/48609014392_44dcb0ca37_k_d.jpg'><h1>Presupuesto
+            limitado para software libre</h1>
+            <h2 class='fragment'>La optimización importa</h2>
+
+          <aside class='notes'>En todo caso, siempre se trata de hacer
+          las cosas en un mínimo de tiempo, y sobre todo no usando más
+          que el tiempo que sea necesario. Hacerlo todo lo más
+          rápidamente posible permite que los tests sean más
+            eficientes para corregir los fallos rápidamente.</aside>
+          </section>
         </section>
 
 	<section><!-- Makefiles 2021 -->
