Listo para producción

--- a/index.html
+++ b/index.html
@@ -438,13 +438,27 @@ jobs:
   }
           </code></pre><aside class='notes'>Sacada de <a
           href='https://docs.drone.io/pipeline/scripting/starlark/'>la
-            documentación de Drone.io</a>
+            documentación de Drone.io</a>. Es posible que por aquí
+          ande el futuro de la integración continua; YAML llega hasta
+          donde llega y necesitas conocer bien la sintaxis y semántica
+          para no cagarla. En este caso es un lenguaje de
+          programación, con llamadas a funciones y estructuras de
+            datos más o menos complejas.</aside>
         </section>
 
         <section
         data-background='img/grafo-github-actions.png'><h1 class='fragment'>Integración
           continua → un <em>stack</em> todavía más <em>full</em></h1>
         </section>
+        </section>
+
+        <section><h1>Probar que algo funciona en producción puede ser
+          más difícil que programarlo</h1>
+          <h2 class='fragment'>E implica más tecnologías</h2>
+        </section>
+
+        <section><h1>Integración continua mejora todo</h1>
+          <img src='img/ci-meme.jpg' class='fragment'>
         </section>
         
         <section data-background='https://live.staticflickr.com/65535/50327948996_f2a87c2d28_k_d.jpg'><h1>Muchas gracias.</h1></section>
